foodtracker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foodtracker
  namespace: foodtracker
spec:
  selector:
    matchLabels:
      app: foodtracker
  template:
    metadata:
      labels:
        app: foodtracker
    spec:
      containers:
        - name: foodtracker
          image: ghcr.io/fluffylea/foodtracker/foodtracker:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: foodtracker-data
              mountPath: /data
      volumes:
        - name: foodtracker-data
          persistentVolumeClaim:
            claimName: foodtracker-pvc
