foodtracker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foodtracker
  namespace: foodtracker
spec:
  ingressClassName: nginx
  rules:
    - host: foodtracker.becutewith.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: foodtracker
                port:
                  number: 3000
